# FIT5

./: .gitignore  README.md
ISA/projekt/: CMakeLists.txt  Makefile  README  arguments.c  arguments.cpp  arguments.h  atom_reader.cpp  atom_reader.h  deploy.sh  feedfile  feedreader  main.c  main.cpp  requests.c  requests.cpp  requests.h  test.sh  xkukan00.tar  xml_reader.cpp  xml_reader.h  zadani.txt
iis/: README.md
iis/doc/: doc.html
iis/other/: deploy.sh  nginx.conf
iis/other/data_generators/: fill_matches_2018.py  fill_matches_2_players.py  fill_matches_players.py  goals_gen.py  goals_gen_2.py  goals_gen_2018.py  matches_2_gen.py  matches_gen.py  matches_gen_2018.py  penalties_gen.py  penalties_gen_2018.py  players_gen.py
iis/other/raw_images/: readme
iis/src/oafl/: settings.py
iis/src/static/css/: teams.css
iis/src/templates/browser/: teams.html
iis/technical_report/: itu-tr.tex
